runs/2022-01-22T20-17-56.520877/stderr.log
Traceback (most recent call last):
  File "main.py", line 125, in <module>
    run_testcase(args.testcase, args)
  File "main.py", line 101, in run_testcase
    get_ans = get_ans_fn(config, inp)
  File "/home/matulni/Documents/coding_various/google_hash_2022/hashcode2022-one-pizza/util.py", line 144, in get_ans_fn
    sol_fn = get_function('solve', config)
  File "/home/matulni/Documents/coding_various/google_hash_2022/hashcode2022-one-pizza/util.py", line 45, in get_function
    module = import_module(module_name)
  File "/home/matulni/miniconda3/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/matulni/Documents/coding_various/google_hash_2022/hashcode2022-one-pizza/solvers/sa.py", line 52
    score_to_energy = lambda score: (C-score)
    ^
IndentationError: unexpected indent
